refactor : 예외 처리 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <div class="col-md-6">
-            <div class="section">누적 로또 구매 목록</div>
+            <div class="section">로또 구매 목록</div>
             <div id="lottoItemList">
             </div>
             <button class="section btn btn-primary" id="btn_lotto_result">결과 보기</button>
