feat: update purchased lotto tickets view

--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -21,7 +21,12 @@
 
 			<div class="container">
 				<div class="row mb-2 text-center">
+					<p class="h5">구입 금액: 1000원</p>
+					<p class="h5">수동으로 n장, 자동으로 n개를 구매했습니다.</p>
+				</div>
+				<div class="row mb-2 text-center">
 					<div class="btn-group-toggle " data-toggle="buttons">
+						<span class="badge badge-pill badge-secondary">1&nbsp;</span>
 						<label class="btn btn-outline-dark mb-1 active">
 							<input type="checkbox" checked autocomplete="off" disable> 1
 						</label>
