--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>로또 게임</title>
 </head>
 <body>
-Hello World!!
+<h1>메인 페이지 입력</h1>
+<form action="lottogame/money" method="post">
+    <input type="submit" value="로또 구입">
+</form>
+<form action="lottogame/result" method="post">
+    <input type="submit" value="당첨 번호 입력">
+</form>
+<div class="hello"></div>
 </body>
 </html>
