--- a/src/main/resources/templates/404page.html
+++ b/src/main/resources/templates/404page.html
@@ -8,22 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Lotto App</title>
+    <title>Error 404</title>
 </head>
 <body>
 <div class="container">
-    <form method="post" action="/home">
-        <div class="form-group">
-            <label for="money">로또 구입 금액</label>
-            <input name="lottoBuyingMoney" type="number" class="form-control" id="money" aria-describedby="inputMoneyHelp" placeholder="로또 구입 금액을 입력하세요.">
-            <small id="inputMoneyHelp" class="form-text text-muted">로또 가격은 한 장당 1000원입니다.</small>
-        </div>
-        <div class="form-group">
-            <label for="custom">수동 로또 개수</label>
-            <input name="numOfCustomLottos" type="number" class="form-control" id="custom" placeholder="구매할 수동 로또 개수를 입력하세요.">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <h1>404 page</h1>
+    <p></p>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
