--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -12,18 +12,21 @@
 </head>
 <body>
 <div class="container">
-    <form method="post" action="/home">
-        <div class="form-group">
-            <label for="money">로또 구입 금액</label>
-            <input name="lottoBuyingMoney" type="number" class="form-control" id="money" aria-describedby="inputMoneyHelp" placeholder="로또 구입 금액을 입력하세요.">
-            <small id="inputMoneyHelp" class="form-text text-muted">로또 가격은 한 장당 1000원입니다.</small>
-        </div>
-        <div class="form-group">
-            <label for="custom">수동 로또 개수</label>
-            <input name="numOfCustomLottos" type="number" class="form-control" id="custom" placeholder="구매할 수동 로또 개수를 입력하세요.">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <p>당첨로또번호 : {{ result.winningLotto }}</p>
+    <p>수익률 : {{ result.interestRate }}%</p>
+    <p>상금 : {{ result.prize }}원</p>
+    <p>구매한 로또(들)</p>
+    <ul>
+        {{#each result.lottos}}
+            <li>{{this}}</li>
+        {{/each}}
+    </ul>
+    <p>당첨 결과</p>
+    <ul>
+        {{#each result.result}}
+            <li>{{this}}</li>
+        {{/each}}
+    </ul>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
