--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -24,7 +24,7 @@
             <div class="inner">
                 <section>
                     <div class="content" align="center">
-                        {{{winningNumbers}}}
+                        <b>제 {{round}}회</b> : {{{winningNumbers}}}
                     </div>
                     <br />
                     <div class="content" align="center">
