--- a/src/main/resources/templates/finalResult.html
+++ b/src/main/resources/templates/finalResult.html
@@ -7,11 +7,21 @@
 <body>
 <h1>당첨 통계</h1>
 <div>-----------</div>
-<div> 3개 일치 (5000원)- {{FIFTH}}개</div><br>
-<div>4개 일치 (50000원)- {{FORTH}}개</div><br>
-<div>5개 일치 (1500000원)- {{THIRD}}개</div><br>
-<div>5개 일치, 보너스 볼 일치(30000000원) - {{SECOND}}개</div><br>
-<div> 6개 일치 (2000000000원)- {{FIRST}}개</div><br>
+{{#FIRST}}
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+{{/FIRST}}
+{{#SECOND}}
+<div> {{matchCount}}개 일치,보너스 볼 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+{{/SECOND}}
+{{#THIRD}}
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+{{/THIRD}}
+{{#FORTH}}
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+{{/FORTH}}
+{{#FIFTH}}
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+{{/FIFTH}}
 <div>수익률은 {{rate}} % 입니다.</div>
 </body>
 </html>
