Web UI LottoTicket들 출력 부분 구현

--- a/src/main/resources/templates/view/lotto_winning.html
+++ b/src/main/resources/templates/view/lotto_winning.html
@@ -49,23 +49,13 @@
     </header>
 
     <main role="main" class="inner cover">
-        <form action="/numbers" class="was-validated" method="post">
-            <h4>{{error_manual}}</h4>
-            <h4 class="cover-heading">수동으로 {{manual_amount}}장, 자동으로 {{auto_amount}}장을 구매하였습니다.</h4>
-            <div class="form-group" id="tags">
-                <script>
-                    var manual_amount = new URLSearchParams(window.location.search).get("manual_amount")
-
-                    if(manual_amount != 0){
-                        document.getElementById("tags").innerHTML += '<h4 class="cover-heading">로또 번호와 당첨 번호 입력해 주세요!</h4>'
-                        for(var i = 0 ; i < manual_amount ; i++){
-                            var input =  '<input class="form-control" id="manual_lotto" type="text" placeholder="번호 입력" name="manual_lotto' + i + '" required><br>'
-                            document.getElementById("tags").innerHTML += input
-                        }
-                    }
-
-                    document.getElementById("tags").innerHTML += '<button type="submit"class="btn btn-success"> 다음 </button>'
-                </script>
+        <form action="/winning_lotto" class="was-validated ">
+            <h4 class="cover-heading">구매한 로또 번호는 다음과 같습니다.</h4>
+            <div class="form-group">
+                {{#lottos}}
+                {{this}}
+                <br/>
+                {{/lottos}}
             </div>
         </form>
     </main>
