--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>로또</title>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
-Hello World!!
+<h2>{{newRound}}회 로또</h2>
+<div id="box">
+    <form action="/amount">
+        구입 금액을 입력하세요. <br/>
+        <input type="text" name="amount"><br/>
+        <input type="submit" value="입력">
+    </form>
+</div>
 </body>
 </html>
