refactor html 파일들 모두 template 밑으로 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>서비스를 선택하세요</div>
-    <button type="button" onclick="location.href='/html/show_history.html'">조회하기</button>
-    <button type="button" onclick="location.href='/html/make_lotto.html'">로또 구매하기</button>
+    <button type="button" onclick="location.href='/showhistory'">조회하기</button>
+    <button type="button" onclick="location.href='/makelotto'">로또 구매하기</button>
 </body>
 </html>
