--- a/src/main/resources/templates/make_lotto.html
+++ b/src/main/resources/templates/make_lotto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link href="../css/make_lotto.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/make_lotto.css" rel="stylesheet" type="text/css"/>
     <title>로또</title>
 </head>
 <body>
@@ -132,7 +132,7 @@
     </div>
 </div>
 
-<script src="../javascript/make_lotto/moneyFunc.js"></script>
-<script src="../javascript/make_lotto/lotteriesFunc.js"></script>
+<script src="/javascript/make_lotto/moneyFunc.js"></script>
+<script src="/javascript/make_lotto/lotteriesFunc.js"></script>
 </body>
 </html>
