refactor: 피드백 반영, 경로에 소문자만 사용

--- a/src/main/resources/templates/manual.html
+++ b/src/main/resources/templates/manual.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="container" style="max-width: 500px; margin-top: 30px">
-    <form action="/showLotto" method="post" accept-charset="UTF-8">
+    <form action="/show/lotto" method="post" accept-charset="UTF-8">
         <h1>수동으로 {{manualAmount}} 개 구매 가능합니다.</h1>
         {{#manualAmount}}
         <h2>쉼표로 구분해서 한줄에 숫자 6개씩 입력해 주세요</h2>
