--- a/src/main/resources/templates/selectRound.html
+++ b/src/main/resources/templates/selectRound.html
@@ -6,7 +6,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<form action="/showRounds" method="get">
+<form action="/show/round" method="get">
     <div class="container" style="max-width: 500px; margin-top: 30px">
         <h1>1~ {{round}} 회차 중 조회할 회차를 입력하세요.</h1>
         <div class="input-group mb-3">
