--- a/src/main/resources/templates/showLottos.html
+++ b/src/main/resources/templates/showLottos.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container" style="max-width: 500px; margin-top: 30px">
-    <form action="/showResult" method="post" accept-charset="UTF-8">
+    <form action="/show/result" method="post" accept-charset="UTF-8">
         <ul class="list-group">
             {{#lottoTickets.lottoTickets}}
             <li class="list-group-item">{{lottoNumbers}}</li>
